<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Note</string>
    <string name="agenda">Agenda</string>
    <string name="materia">Matéria</string>
    <string name="config">Configuração</string>
    <string name="conteudo">Conteúdo</string>
    <string name="action_settings">Settings</string>
    <string name="text_pesq_hint">Pesquisar</string>
    <string name="text_novo_caderno">Novo caderno</string>
    <string name="edit_nome_caderno_hint">Nome do caderno</string>
    <string name="text_cor_capa">Cor da capa</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="add">Adicionar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="edit">Editar</string>
    <string name="save">Salvar</string>
    <string name="del">Excluir</string>
    <string name="editar">Editar</string>
    
    <!-- Tela matéria -->
    <string name="nova_materia">Nova Matéria</string>
    <string name="hint_nome_materia">Nome da Matéria</string>
    <string name="dia_semana">Dia da semana</string>
    <string-array name="array_semana">
        <item>Domingo</item>
        <item>Segunda-feira</item>
        <item>Terça-feira</item>
        <item>Quarta-feira</item>
        <item>Quinta-feira</item>
        <item>Sexta-feira</item>
        <item>Sábado</item>
    </string-array>
    <string name="hint_nome_professor">Nome do professor</string>
    <string name="hint_email_professor">E-mail do professor</string>
    <string name="hint_sala">Sala</string>
    
    <!-- Tela Agenda -->
    
    <string name="novo_lembrete">Novo Lembrete</string>
    <string name="hist_descricao">Descricao</string>
    <string name="prompt_sel_caderno">Selecione o caderno</string>
    <string name="prompt_sel_materia">Selecione a Matéria</string>
    <string name="vincular_materia">Vincular Matéria</string>
    <string name="lembrar">Lembrar-me</string>
    <string name="pesq_data">Pesquisar por data</string>
    <string name="pesq_caderno">Pesquisar por caderno</string>
    <string name="pesq_materia">Pesquisar por materia</string>

    
    
    <!-- Tela Config -->
    <string name="button_login_drop">VINCULAR CONTA</string>
    <string name="button_logout_drop">EXCLUIR CONTA</string>
    <string name="radio_config">Configurar Sincronização</string>
    <string name="radio_wifi">Sincronizar apenas no Wi-fi</string>
    <string name="radio_3g_wifi">Sincronizar no Wi-fi e no Plano de Dados</string>
    <string name="radio_naosinc">Nunca sincronizar</string>
    
    <!-- Tela Editor -->
    
    <string name="menu_editar">Editar conteúdo</string>
    <string name="menu_compartilhar">Compartilhar</string>
    <string name="menu_sincronizar">Sincronizar</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_inserir_imagem">Inserir imagem</string>
    <string name="menu_inserir_desenho">Inserir desenho</string>
    <string name="menu_inserir_voz">Inserir nota de voz</string>
    <string name="camera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="contentImagem">Imagem da camera/galeria</string>
    
    <!-- Integrantes e coordenador -->
    <string name="willian">WILLIAN VALERIO</string>
    <string name="andre">ANDRÉ PENER</string>
    <string name="victor">VICTOR RODRIGUES</string>
    <string name="henrique">HENRIQUE CATELANI</string>
    <string name="wesley">WESLEY RODRIGUES</string>
    <string name="diego">DIEGO TIBURCIO</string>
    <string name="prof">PROFESSOR ORIENTADOR:</string>
    <string name="coordenador">ANDRÉ LUIZ DIAS RIBEIRO</string>
    <string name="usjt">UNIVERSIDADE SÃO JUDAS TADEU</string>
    <string name="integrantes">INTEGRANTES:</string>
    
    <!-- Mensagens e avisos -->
    <string name="informe_nome_caderno">Informe o nome do caderno.</string>
    <string name="informe_nome_materia">Informe o nome da matéria.</string>
    <string name="informe_descricao_agenda">Informe a descrição do lembrete.</string>
    <string name="caderno_duplicado">Esse caderno já existe.</string>
    <string name="materia_duplicada">Essa matéria já existe.</string>
    <string name="email_invalido"> E-mail inválido</string>
    <string name="dropbox_vinculado">A conta da dropbox foi vinculada.</string>
    <string name="dropbox_excluido">A conta do dropbox foi excluida.</string>
    <string name="configs_save">As configurações foram salvas.</string>
    <string name="sync_ok">Arquivos enviados para o dropbox.</string>
    <string name="sem_conexao">Sem conexão com a internet.</string>
    <string name="sem_conexao_later">Sem conexão com a internet, os arquivos serão enviados mais tarde</string>
    <string name="carregando">Carregando conteúdo.</string>
    <string name="aguarde">Aguarde.</string>
    
    <!-- Chaves e parametros -->
    <string name="NOME_CADERNO">NOME_CADERNO</string>
    <string name="COR_CADERNO">COR_CADERNO</string>
    <string name="INDEX">INDEX</string>
    <string name="EDICAO">EDICAO</string>
    <string name="VIEW">VIEW</string>
    <string name="DESC_AGENDA">DESC_AGENDA</string>
    <string name="DATA_AGENDA">DATA_AGENDA</string>
    <string name="HORA_AGENDA">HORA_AGENDA</string>
    <string name="LEMBRAR">LEMBRAR</string>
    <string name="NOME_MATERIA">NOME_MATERIA</string>
    <string name="DIA_SEMANA">DIA_SEMANA</string>
    <string name="NOME_PROFESSOR">NOME_PROFESSOR</string>
    <string name="EMAIL_PROFESSOR">EMAIL_PROFESSOR</string>
    <string name="COR_MATERIA">COR_MATERIA</string>
    <string name="titulo_escolher_imagem">Inserir imagem a partir </string>
    <string name="escolher_imagem">Selecionar Imagem</string>
    <string name="PREFS_NAME">preferences</string>
    <string name="SYNC">sync</string>
    <string name="APP_KEY">lngtpdadq6katby</string>
    <string name="APP_SECRET">z5lqnf70ie6gh9q</string>
    <string name="IMAGENS">imagens</string>
    <string name="AUDIOS">audios</string>
    <string name="noExtStorageAvailable">External storage is unavailable</string>
    <string name="recordingError">Erro ao gravar áudio</string>
    <string name="saveRecordError">Erro ao salvar gravação</string>
    <string name="btnGravarAudio">Gravar</string>
    <string name="stopRecordBtn">Stop</string>    
    <string name="audio_record">Selecionar Audio</string>
    <string name="titulo_desenho">Cancelar</string>
    <string name="escolher">Escolher</string>
    <string name="DESENHO_WALLPAPER_SETEDUP">Papel de parede não foi configurado</string>
    <string name="DESENHO_IMAGE_SAVED">Desenho salvo com sucesso</string>
    <string name="DESENHO_SAVED_ERROR">Erro ao salvar desenho</string>
    <string name="DESENHO_BG_COLOR">Cor de fundo</string>
    <string name="DESENHO_COLOR">Selecionar cor</string>
    <string name="DESENHO_EMBOSS">Entalhar</string>
	<string name="DESENHO_BLUR">Borrar</string>
    <string name="DESENHO_ERASE">Apagar</string>
	<string name="DESENHO_SRCATOP">Clarear</string>
    <string name="DESENHO_BORDER">Borda</string>
    <string name="DESENHO_SAVE">Salvar</string>
	<string name="DESENHO_CURVE">Curvas</string>
	<string name="DESENHO_RECTANGLE">Retângulo</string>
	<string name="DESENHO_NO_BORDER">Sem borda</string>
	<string name="DESENHO_CLEAR">Limpar</string>
	<string name="BROWSER_DOESNT_SUPPORT_AUDIO">Seu browser não suporta o elmento de audio.</string>
	<string name="imagem_nao_selecionada">Imagem não selecionada</string>
	
	
</resources>
