<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/menu_editar"
        android:icon="@drawable/ic_mode_edit_white_48dp"
        android:showAsAction="always"
        android:title="@string/menu_editar"/>
    
    <item 
        android:id="@+id/menu_compartilhar"
        android:icon="@drawable/ic_share_white_48dp"
        android:showAsAction="always"
        android:title="@string/menu_compartilhar"/>
    
    <item 
        android:id="@+id/menu_sincronizar"
        android:icon="@drawable/ic_cloud_upload_white_48dp"
        android:showAsAction="always"
        android:title="@string/menu_sincronizar"/>
    
    <item 
        android:id="@+id/menu_pesquisar"
        android:icon="@drawable/ic_search_white_48dp"
        android:showAsAction="always"
        android:title="@string/menu_pesquisar"/>
    
    <item 
        android:id="@+id/menu_inserir_imagem"
        android:icon="@drawable/ic_camera_alt_white_48dp"
        android:showAsAction="always"
        android:title="@string/menu_inserir_imagem"/>
    
    <item 
        android:id="@+id/menu_inserir_desenho"
        android:icon="@drawable/ic_palette_white_48dp"
        android:showAsAction="always"
        android:title="@string/menu_inserir_desenho"/>
    
    <item 
        android:id="@+id/menu_inserir_voz"
        android:icon="@drawable/ic_mic_none_white_48dp"
        android:showAsAction="always"
        android:title="@string/menu_inserir_voz"/>
    
    <item 
        android:id="@+id/menu_salvar"
        android:icon="@drawable/ic_save_white_48dp"
        android:showAsAction="always"
        android:title="@string/save"/>
    

</menu>
