<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/bg_popup"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/txtNovoLembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_lembrete"
        android:layout_marginBottom="@dimen/margin_components_popoup"
        style="@style/text_pop_up"/>
    
    <EditText 
        android:id="@+id/edtDescLembrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hist_descricao"
        android:layout_marginBottom="@dimen/margin_components_popoup"
        android:layout_marginLeft="@dimen/margin_components_popoup"
        android:layout_marginRight="@dimen/margin_components_popoup"
        android:inputType="textCapCharacters"
        android:imeOptions="actionDone"
        style="@style/edit_text_pop_up"/>
    
    <TextView 
        android:id="@+id/txtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_components_popoup"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_calendario"
        android:drawablePadding="10dp"
        style="@style/text_dataHora"/>
    
    <TextView 
        android:id="@+id/txtHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_components_popoup"
        android:drawableLeft="@drawable/ic_relogio"
        android:drawablePadding="10dp"
        style="@style/text_dataHora"/>
    
     <CheckBox
        android:id="@+id/checkLembrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_marginBottom="@dimen/margin_components_popoup"
        android:text="@string/lembrar" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vincular_materia"
        android:layout_marginBottom="@dimen/margin_components_popoup"
        style="@style/text_pop_up"/>
    
    
    <Spinner
        android:id="@+id/spinnerCaderno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_components_popoup"
        android:spinnerMode="dropdown"
        android:prompt="@string/prompt_sel_caderno"/>
    
    <Spinner
        android:id="@+id/spinnerMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginBottom="@dimen/margin_components_popoup"
        android:prompt="@string/prompt_sel_materia"/>

</LinearLayout>
